elasticsearch-and-kibana-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: elastic-ingress
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: elastic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
  tls:
    - hosts:
        - elastic.example.com
    - secretName: api-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kibana-ingress
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.example.com
    - secretName: api-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kibana-ingress-nip-io
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.172.16.240.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.172.16.240.240.nip.io
    - secretName: api-tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: quickstart-kb-http-lb
  namespace: eck
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: quickstart
spec:
  type: LoadBalancer
  selector:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: quickstart
  ports:
    - name: https
      port: 5601
      protocol: TCP
      targetPort: 5601
