nginx-deployment-with-nfs-and-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: eck
  labels:
    run: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: eck
  labels:
    run: nginx
spec:
  type: ClusterIP
  selector:
    run: nginx-main
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.172.16.240.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.172.16.240.240.nip.io
    - secretName: api-tls-secret
